<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="query_hint">Enter Query</string>
    <string name="title_activity_image_display">Image Search</string>
    <string name="title_activity_setting">Image Search Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="restrict_site_hint">Restrict Site</string>
    <string name="save">Save</string>
    
    <string-array name="size_array">
        <item>none</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>New Zealand</item>
        <item>huge</item>
    </string-array>
    
    <string-array name="color_array">
        <item>none</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    
    <string-array name="type_array">
        <item>none</item>
        <item>photo</item>
        <item>face</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
        <string name="size">Size</string>
        <string name="color">Color</string>
        <string name="type">Type</string>

</resources>
